# molecular-synth

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
bom/: bom.md  render_bom.py
catalog/: README.md
catalog/makerlib/: __init__.py  checker.py  cli.py  cocktails.json  order.py
catalog/tests/: test_makerlib.py
compiler/: README.md  pyproject.toml  requirements.txt
compiler/molsynth/: __init__.py  cli.py  decorate.py  export.py  geometry.py  mechanics.py  optimizer.py  protocol.py  report.py  scaffold.py  sequences.py  staples.py  structure3d.py
compiler/molsynth/data/: m13mp18.txt
docs/: build-guide.md  claims.json  integration.md  molecule-vs-element.md  north-star.md  science.md  the-ladder.md  vision.md
docs/research/: 01-origami-design-tools.md  02-folding-thermocycler.md  03-hardening-inorganic.md  04-verification-gel-stm.md  (+3 more)
examples/: README.md  octahedron.stl  square_pyramid.json
hardware/: README.md
northstar/: diamond_sim.py
proofs/: README.md  run_proofs.py
protocol/: README.md
research/: FINDINGS.md  exp10_hierarchy.py  exp1_tm_salt_calibration.py  exp2_scale_physics.py  exp3_design_sweet_spots.py  exp4_gc_uniformity_offset.py  exp5_why_scale_matters.py  exp6_physics_redteam.py  exp7_edge_stiffness.py  exp9_kinetic_ladder.py
synth/: README.md
tests/: test_compiler.py  test_hierarchy.py
validate/: validate.py
web/: README.md  index.html  synth.js
(+132 files in other folders)
